fixed spacing for realz

--- a/css/main.scss
+++ b/css/main.scss
@@ -34,9 +34,9 @@ a, a:visited {
 
 .container {
   display: flex;
-  padding-top: 10vh;
-  height: 100vh;
-  // min-height: 100vh;
+  padding-top: 5vh;
+  max-height: 100vh;
+  min-height: 100vh;
   flex-direction: column;
   max-width: 560px;
   margin: auto;
